# FilmInfo

./: CMakeLists.txt  FilmInfo.cpp  FilmInfo.h  film1.json  films.json
